--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.screens.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mainToolbar"
@@ -24,7 +24,7 @@
             style="@style/Toolbar">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/submitBtn"
+                android:id="@+id/goToSubmitBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -65,6 +65,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/leadersViewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/mainTabLayout"
