--- a/app/src/main/res/layout/item_learning.xml
+++ b/app/src/main/res/layout/item_learning.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/top_learner"
-                />
+                android:contentDescription="@string/image" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/nameTV"
